--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <title>前端依赖健康监控服务的实践</title>
         <link rel="stylesheet" href="./css/slide.css" />
         <link rel="stylesheet" href="./css/monokai_sublime.min.css" />
-        <script src="./hyperdown/Parser.js"></script>
         <script src="./js/highlight.min.js"></script>
-        <script src="./js/slide.js"></script>
         <script>
             hljs.initHighlightingOnLoad();
         </script>
+        <script src="./hyperdown/Parser.js"></script>
+        <script src="./js/slide.js"></script>
     </head>
     <body>
 <div id="slide"></div>
@@ -29,7 +29,7 @@
 -------
 ##### 做一个工具解决项目依赖模块**版本更新**和**不同环境**之间版本差异的问题.
 -------
-> ### 一脸无奈, :joy
+> ### 一脸懵*, :joy
 -------
 ### 先找找开源
 -------
@@ -109,8 +109,8 @@
 ##### 遇到痛点问题
 
 * 项目依赖如何更新？
-* Github 接口请求限制（认证后5000次每小时）
 * 模块依赖的依赖出问题
+* Github 接口请求限制（5000次每小时）
 -------
 ###### 项目依赖更新 
 
