--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 -------
 ##### 做一个工具解决项目依赖模块**版本更新**和**不同环境**之间版本差异的问题.
 -------
-> ### 一脸懵*, :joy
+> ### 一脸懵X, :joy
 -------
 ### 先找找开源
 -------
@@ -38,13 +38,14 @@
 ![现有方案](./img/scheme.png)
 
 -------
-###### 功能需求点 
+###### 共性需求  ** => ** 定制功能
 
-1. 自动检测依赖更新
-2. 模块更新收到提醒
-3. 详细的更新日志
-4. 收集模块黑名单
-5. **和发布系统整合**
+1. 自动从 NPM 更新  ** => ** 公司 cnpm 上私有模块
+2. 依赖更新 PR 提醒
+2. 集成 Github     ** => **  兼容公司 gitlab
+3. CI 跑测试检验    ** => **  和发布系统整合
+4. 收集模块黑名单    ** => **  主动上报
+5. 模块排行榜
 -------
 ##### 问题难点
 
@@ -66,7 +67,27 @@
 * 主版本和次版本更新，给项目提 PR
 * 问题模块版本，给项目提 issue
 -------
-### 优雅的接入服务
+##### 黑名单  
+
+1. 包安全/漏洞检查
+  * nodesecurity Advisories list
+  * snyk Vulnerability DB
+2. 用户上报黑名单
+
+-------
+####### 拉取 [npms.io](https://npms.io/about)评分
+
+![npms](./img/npms.png)
+
+-------
+### 爬虫任务较多
+-------
+
+![架构图-0](./img/architecture-0.png)
+
+-------
+### 优雅的接入服务  
+
 -------
 #### 命令行工具
 
@@ -75,24 +96,23 @@
 3. disable
 
 -------
+
+![架构图-1](./img/architecture-1.png)
+
+-------
 #### 批量快速接入  
 
 1. 在线package.json的地址
 2. github / gitlab root权限
+-------
+
+![架构图-2](./img/architecture-2.png)
 
 -------
 ##### 更加友好的交互 
 
 1. 登录绑定 Github / Gitlab账户
 2. 界面批量接入项目，处理依赖更新
-
--------
-##### 黑名单和评分  
-
-1. 包安全/漏洞检查（nodesecurity.io）
-2. 用户上报黑名单
-3. npm模块评分
-
 -------
 ###### Github / Gitlab API  
 
