--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 ### 前端依赖
 ##### 监控服务的实践
 -------
+### 程序员小明的故事
+-------
 # 我
 -------
-1. **走宽**@(huijian.lu@ele.me)
+1. **卢惠健**(@走宽Blue)
+2. github.com/luxiaojian
 2. JS(Node.js + Vue)
 3. 饿了么大前端 - Node研发组 - 后端
--------
-### 程序员小明的故事
 -------
 ##### 做一个工具解决项目依赖模块**版本更新**和**不同环境**之间版本差异的问题.
 -------
@@ -42,10 +43,10 @@
 
 1. 自动从 NPM 更新  ** => ** 公司 cnpm 上私有模块
 2. 依赖更新 PR 提醒
-2. 集成 Github     ** => **  兼容公司 gitlab
-3. CI 跑测试检验    ** => **  和发布系统整合
+2. 集成 Github     ** => **  兼容公司 Gitlab
+3. CI 测试检验    ** => **  和发布系统整合
 4. 收集模块黑名单    ** => **  主动上报
-5. 模块排行榜
+5. 模块积分排行榜
 -------
 ##### 问题难点
 
@@ -131,7 +132,7 @@
 
 * 项目依赖如何更新？
 * 模块依赖的依赖出问题
-* 任务集中执行，DB 报警
+* DB 读写过多报警
 -------
 ###### 项目依赖更新 
 
@@ -139,7 +140,8 @@
 2. webhook 触发模块更新
 
 -------
-###### DB 报警  
+##### DB 报警  
+_任务分散到不同时间点执行_
 
 ```js
 module.exports = (arr, times, cb) => {
@@ -147,9 +149,11 @@ module.exports = (arr, times, cb) => {
 };
 ```
 -------
-###### 模块依赖的依赖  
+###### 模块依赖的依赖 
 
-从 CI 系统中提取安装依赖的列表，和服务中黑名单模块列表对比。
+![ci](./img/ci.png)
+
+_从 CI 中提取安装依赖的列表，与黑名单模块列表对比_
 
 -------
 ## 最后
